# SIRA

./: .gitignore  .pre-commit-config.yaml  buildVars.py  changelog.md  pyproject.toml
.github/workflows/: build_addon.yml  manual-tag.yml
SIRA.egg-info/: PKG-INFO  SOURCES.txt
addon/: installTasks.py
addon/globalPlugins/SIRA/: __init__.py  addEditRecord.py  configPanel.py  controller.py  dbConfig.py  generalMessage.py  main.py  manageDuplicatesDialog.py  medicalDischarge.py  messageForTransport.py  model.py  sqlLoader.py  updateManager.py  varsConfig.py
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
