[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SIRA"
dynamic = ["version"]
description = "SIRA (an acronym in Portuguese for Sistema Interno de Ramais e Anotações) is an add-on designed to improve internal communication and the recording of essential information within the Health Department."
maintainers = [
	{name = "Edilberto Fonseca", email = "edilberto.fonseca@outlook.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "COPYING.TXT"}
dependencies = [
	# Build add-on
	"scons==4.10.1",
	"Markdown==3.10",
	# Translations management
	"requests==2.32.5",
	"nh3==0.3.2",
	"crowdin-api-client==1.24.1",
	"lxml==6.0.2",
	"mdx_truly_sane_lists==1.3",
	"markdown-link-attr-modifier==0.2.1",
	"mdx-gh-links==0.4",
	# Lint
	"uv==0.9.11",
	"ruff==0.14.5",
	"pre-commit==4.2.0",
	"pyright[nodejs]==1.1.408",
]
[project.urls]
Repository = "https://github.com/EdilbertoFonseca/SIRA"

[tool.ruff]
line-length = 110

builtins = [
	# translation lookup
	"_",
	# translation lookup
	"ngettext",
	# translation lookup
	"pgettext",
	# translation lookup
	"npgettext",
]

include = [
	"*.py",
	"sconstruct",
]

exclude = [
	".git",
	"__pycache__",
	".venv",
	"buildVars.py",
	"lib",
	"lib64",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
ignore = [
	# indentation contains tabs
	"W191",
]
logger-objects = ["logHandler.log"]

[tool.ruff.lint.per-file-ignores]
# sconscripts contains many inbuilt functions not recognised by the lint,
# so ignore F821.
"sconstruct" = ["F821"]

[tool.pyright]
pythonPlatform = "Windows"
typeCheckingMode = "strict"

include = [
	"**/*.py",
]

exclude = [
	"sconstruct",
	".git",
	"__pycache__",
	".venv",
	"site_scons",
	# When excluding concrete paths relative to a directory,
	# not matching multiple folders by name e.g. `__pycache__`,
	# paths are relative to the configuration file.
	"addon/globalPlugins/SIRA/lib",
	"addon/globalPlugins/SIRA/lib64",
]

# Tell pyright where to load python code from
extraPaths = [
	"./addon",
	"../NVDA/source",
	".vscode/typings"
]

# General config

# CORE CONFIGURATION
# Enable analysis even for functions without type annotations
analyzeUnannotatedFunctions = true

# Warn when using deprecated typing aliases (e.g. Dict, List)
deprecateTypingAliases = true

# CORE RULES (ENABLED)

# Warn when abstract classes are used incorrectly
reportAbstractUsage = true

# Warn when assertions are always true
reportAssertAlwaysTrue = true

# Warn when assert_type() checks fail
reportAssertTypeFailure = true

# Warn when assigned value does not match declared type
reportAssignmentType = true

# Warn when calling functions inside default parameter values
reportCallInDefaultInitializer = true

# Warn when function calls have incorrect arguments
reportCallIssue = true

# Warn when constants are redefined
reportConstantRedefinition = true

# Warn when duplicate imports exist
reportDuplicateImport = true

# Warn when accessing members on functions incorrectly
reportFunctionMemberAccess = true

# General type checking issues
reportGeneralTypeIssues = true

# Warn when strings are implicitly concatenated
reportImplicitStringConcatenation = true

# Warn when method overrides are incompatible
reportIncompatibleMethodOverride = true

# Warn when variable overrides are incompatible
reportIncompatibleVariableOverride = true

# Warn when type stubs are incomplete
reportIncompleteStub = true

# Warn when constructor definitions are inconsistent
reportInconsistentConstructor = true

# Warn when overload definitions are inconsistent
reportInconsistentOverload = true

# Warn when indexing operations are invalid
reportIndexIssue = true

# Warn when invalid escape sequences are used in strings
reportInvalidStringEscapeSequence = true

# Warn when stub files contain invalid statements
reportInvalidStubStatement = true

# Warn when type arguments are invalid
reportInvalidTypeArguments = true

# Warn when type expressions are malformed
reportInvalidTypeForm = true

# Warn when TypeVar is used incorrectly
reportInvalidTypeVarUse = true

# Warn when match statements are not exhaustive
reportMatchNotExhaustive = true

# Warn when super().__init__() is not called in subclasses
reportMissingSuperCall = true

# Warn when generic types are missing type arguments
reportMissingTypeArgument = true

# Warn when overloads lack implementation
reportNoOverloadImplementation = true

# Warn when operator usage is invalid
reportOperatorIssue = true

# Warn when calling possibly None objects
reportOptionalCall = true

# Warn when using possibly None as context manager
reportOptionalContextManager = true

# Warn when iterating over possibly None
reportOptionalIterable = true

# Warn when using possibly None in operations
reportOptionalOperand = true

# Warn when subscripting possibly None
reportOptionalSubscript = true

# Warn when overloads overlap incorrectly
reportOverlappingOverload = true

# Warn when variables may be used before assignment
reportPossiblyUnboundVariable = true

# Warn when using private imports
reportPrivateImportUsage = true

# Warn when accessing private members
reportPrivateUsage = true

# Warn when property types mismatch
reportPropertyTypeMismatch = true

# Warn when variables are redeclared
reportRedeclaration = true

# Warn when return types do not match
reportReturnType = true

# Warn when self/cls parameter names are incorrect
reportSelfClsParameterName = true

# Warn when type comments are used instead of annotations
reportTypeCommentUsage = true

# Warn when accessing non-required keys in TypedDict
reportTypedDictNotRequiredAccess = true

# Warn when class decorators lack typing
reportUntypedClassDecorator = true

# Warn when NamedTuple lacks typing
reportUntypedNamedTuple = true

# Warn when variables are used before being defined
reportUnboundVariable = true

# Warn when undefined variables are used
reportUndefinedVariable = true

# Warn when objects are unhashable but used as hashable
reportUnhashable = true

# Warn when instance variables are not initialized
reportUninitializedInstanceVariable = true

# Warn when casts are unnecessary
reportUnnecessaryCast = true

# Warn when comparisons are unnecessary
reportUnnecessaryComparison = true

# Warn when "in" checks are unnecessary
reportUnnecessaryContains = true

# Warn when isinstance checks are unnecessary
reportUnnecessaryIsInstance = true

# Warn when type: ignore comments are unnecessary
reportUnnecessaryTypeIgnoreComment = true

# Warn when __all__ is used incorrectly
reportUnsupportedDunderAll = true

# Warn when classes are declared but not used
reportUnusedClass = true

# Warn when coroutine results are not awaited
reportUnusedCoroutine = true

# Warn when exceptions are caught but not used
reportUnusedExcept = true

# Warn when expressions have no effect
reportUnusedExpression = true

# Warn when functions are declared but not used
reportUnusedFunction = true

# Warn when imports are unused
reportUnusedImport = true

# Warn when variables are unused
reportUnusedVariable = true

# Warn when importing everything from a library
reportWildcardImportFromLibrary = true

# NVDA / WXPYTHON WORKAROUNDS

# These rules are disabled due to dynamic runtime behavior
# and incomplete type information in NVDA and wxPython.

# Dynamic attribute access (e.g. gui.mainFrame, addon globals)
reportAttributeAccessIssue = false

# wxPython runtime coercion (e.g. tuples accepted as Size)
reportArgumentType = false

# NVDA override patterns do not always use explicit override
reportImplicitOverride = false

# Import system modified at runtime by NVDA
reportMissingImports = false
reportMissingModuleSource = false

# Dynamic callback parameters (gesture, event, *args, **kwargs)
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

# Optional runtime objects (e.g. sysTrayIcon may be None)
reportOptionalMemberAccess = false

# wxPython relies on side effects, not return values
reportUnusedCallResult = false

# Dynamic attributes and runtime-injected members
reportUnknownMemberType = false
reportUnknownVariableType = false

# Missing stubs for wxPython
reportMissingTypeStubs = false

# Base classes and decorators without typing support
reportUntypedBaseClass = false
reportUntypedFunctionDecorator = false

# Import cycles may exist due to NVDA structure
reportImportCycles = false

# Deprecated warnings intentionally suppressed
reportDeprecated = false

# STRICTNESS SETTINGS

# Enforce strict type inference for dictionaries
strictDictionaryInference = true

# Enforce strict type inference for lists
strictListInference = true

# Enforce strict handling of None in parameters
strictParameterNoneValue = true

# Enforce strict type inference for sets
strictSetInference = true
